bug: input field break at small-screens

--- a/src/app/comp/search/search.component.scss
+++ b/src/app/comp/search/search.component.scss
@@ -1,6 +1,6 @@
-@import '../../../styles.scss';
+@import "../../../styles.scss";
 
-.main-search{
+.main-search {
     height: 50px;
     max-width: 800px;
     width: 90%;
@@ -9,15 +9,15 @@
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
 
-    @include tap{
+    @include tap {
         width: 100%;
     }
 
-    input{
+    input {
         height: 100%;
         float: left;
         width: 77%;
-        padding: 0px .5rem;
+        padding: 0px 0.5rem;
         background: none;
         border: none;
         text-align: right;
@@ -25,84 +25,87 @@
         font-weight: 700;
         font-size: 1rem;
 
-        @include mobile{
+        @include mobile {
             width: 80%;
         }
+        @include small-mobile {
+            width: 70%;
+        }
 
-        &::placeholder{
+        &::placeholder {
             text-align: right;
             font-family: $mainfont;
             font-weight: 800;
 
-            @include mobile{
+            @include mobile {
                 font-weight: 700;
             }
         }
-    }//the main searh input
+    } //the main searh input
 
-    button{
+    button {
         float: right;
         background-color: $black-color;
         border: 0px;
         border-top-right-radius: 5px;
         border-bottom-right-radius: 5px;
-        padding: .6rem 1.6rem;
+        padding: 0.6rem 1.6rem;
         width: 19%;
         height: 100%;
         cursor: pointer;
-        
-        @include mobile{            
+
+        @include mobile {
             width: 10%;
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
-        img{
+        img {
             width: 30px;
 
-            @include mobile{
+            @include mobile {
                 width: 20px;
             }
         }
-    }//the search main btn
-}//the main search area
+    } //the search main btn
+} //the main search area
 
-.additional-params{
+.additional-params {
     margin-top: 2rem;
 
-    select{
+    select {
         color: $white-color;
         font-weight: 700;
-        padding: 0.8rem 2.6rem; 
+        padding: 0.8rem 2.6rem;
         border-radius: 5px;
         border: none;
         outline: none;
         appearance: none;
         font-size: 1rem;
         font-family: $mainfont;
-        margin-right: .7rem;
-        background: url('/assets/arrow.png');
+        margin-right: 0.7rem;
+        background: url("/assets/arrow.png");
         background-repeat: no-repeat;
-        background-position: right .7em top 50%, 0 0;
-        background-size: .9rem;
+        background-position: right 0.7em top 50%, 0 0;
+        background-size: 0.9rem;
         background-color: $main-color;
-        transition: .5s;
+        transition: 0.5s;
         border: 2px solid $white-color;
 
-        @include tap{
+        @include tap {
             display: block;
             text-align: center;
             width: 100%;
         }
-        
-        &:last-of-type{
+
+        &:last-of-type {
             margin: 0px;
         }
-        
+
         &:focus,
-        &:hover{            
-            transition: .5s;
+        &:hover {
+            transition: 0.5s;
             background-color: $main-color;
             color: $white-color;
             border: 2px solid $black-color;
